# writers-room

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_FIXES_FINAL.md  GEMINI.md  NEW_WRITERS_ROOM.md  OPTIMIZATION_SUMMARY.md  PHASE1_COMPLETE.md  PHASE3_COMPLETE.md  PIPELINE.md  README.md  ROADMAP.md  SETUP.md  TOKEN_OPTIMIZATION.md  WEB_FIXES_SUMMARY.md  agents.py  debug_model.py  main.py  personalities.py  pyproject.toml  requirements-briefing.txt  requirements.txt  start.sh  start_web.sh  test_web_fixes.py  test_web_integration.py
agents/: .gitkeep.json
docs/: HAPPYPATH.md  demos-ui.md  demos.md
docs/architecture/: arch-decisions.md  boundaries.md  execution-context.md  state.md  tech-stack.md
docs/archive/: COMPLETION_STATE_2.1.0.md  FIX_V2_ECHO_PROBLEM.md  PHASE2_COMPLETE.md  PHASE5_COMPLETE.md  QUICK_FIX_SUMMARY.md  README.md
lib/: agents.py  artifacts.py  config.py  custom_agents.py  final_draft.py  personalities.py  pipeline.py  session.py  session_briefing.py  session_turns.py  story_state.py  voice.py
tests/: test_agents.py  test_config.py  test_custom_agents.py  test_main.py  test_pipeline.py  test_session.py  test_session_briefing.py  test_story_state.py  test_web_app.py
web/: README.md  app.py
web/static/css/: style.css
web/static/js/: app.js
web/templates/: agents.html  index.html
