[project]
name = "writers-room"
version = "0.1.0"
description = "Bare-metal collaborative storytelling studio with CLI and FastAPI interfaces."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "pyttsx3>=2.90",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false
